# docs/spec/services/identity-management/openapi.yaml
@@ -12,6 +12,13 @@ paths:
       tags:
         - users
       summary: Get all users
+      parameters:
+        - in: query
+          name: role
+          schema:
+            type: string
+          description: Filter by role
+          required: false
       responses:
         '200':
           description: OK
