# services/identitymanagement/generated-sources/nl/utwente/sosoc/identitymanagement/api/UsersApi.java
@@ -1,5 +1,5 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.11.0).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.12.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
@@ -33,7 +33,7 @@ import java.util.Map;
 import java.util.Optional;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-03-28T18:16:32.443035500+01:00[Europe/Amsterdam]", comments = "Generator version: 7.11.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-04-10T02:09:03.239854500+02:00[Europe/Amsterdam]", comments = "Generator version: 7.12.0")
 @Validated
 @Tag(name = "users", description = "the users API")
 public interface UsersApi {
@@ -111,6 +111,7 @@ public interface UsersApi {
     /**
      * GET /users : Get all users
      *
+     * @param role Filter by role (optional)
      * @return OK (status code 200)
      */
     @Operation(
@@ -130,7 +131,7 @@ public interface UsersApi {
     )
     
     default ResponseEntity<List<User>> getUsers(
-        
+        @Parameter(name = "role", description = "Filter by role", in = ParameterIn.QUERY) @Valid @RequestParam(value = "role", required = false) String role
     ) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
